--- a/index.html
+++ b/index.html
@@ -1763,8 +1763,8 @@
     </div>
   </div>
   
-  <!-- Signup Modal -->
-  <div id="signupModal" class="modal-overlay hidden" role="dialog" aria-labelledby="signupModalTitle" onclick="closeModal('signupModal', event)">
+ <!-- Signup Modal -->
+<div id="signupModal" class="modal-overlay hidden" role="dialog" aria-labelledby="signupModalTitle" onclick="closeModal('signupModal', event)">
     <div class="modal-content" tabindex="0" onclick="event.stopPropagation()">
       <button class="close-btn" onclick="closeModal('signupModal', event)" aria-label="Close signup modal">
         <i class="fas fa-times"></i>
@@ -1777,15 +1777,48 @@
         <p class="text-gray-600 mt-2">Sign up for your QuickFix Pro account</p>
       </div>
       <div class="modal-body">
-        <form class="space-y-6" onsubmit="signupUser(event)">
+        <form class="space-y-6" id="signupForm" onsubmit="signupUser(event)">
+          
+          <!-- Account Type -->
+          <div class="form-group">
+            <label class="form-label">Account Type</label>
+            <select id="account-type" class="form-input" required>
+              <option value="" disabled selected>Select account type</option>
+              <option value="user">User</option>
+              <option value="professional">Professional</option>
+            </select>
+          </div>
+  
+          <!-- Date of Birth -->
+          <div class="form-group">
+            <label for="dob" class="form-label">Date of Birth</label>
+            <input type="date" id="dob" class="form-input" required>
+          </div>
+  
+          <!-- Phone Number -->
+          <div class="form-group">
+            <label for="phone" class="form-label">Phone Number</label>
+            <input type="tel" id="phone" class="form-input" placeholder="+1234567890" required>
+          </div>
+  
+          <!-- Email Address -->
           <div class="form-group">
             <label for="signup-email" class="form-label">Email Address</label>
             <input type="email" id="signup-email" class="form-input" placeholder="Enter your email" required>
           </div>
+  
+          <!-- Address -->
+          <div class="form-group">
+            <label for="address" class="form-label">Address</label>
+            <input type="text" id="address" class="form-input" placeholder="Enter your address" required>
+          </div>
+  
+          <!-- Password -->
           <div class="form-group">
             <label for="signup-password" class="form-label">Password</label>
             <input type="password" id="signup-password" class="form-input" placeholder="Create a password" required>
           </div>
+  
           <button type="submit" class="btn-base btn-primary w-full">
             Create Account
           </button>
@@ -1805,6 +1838,8 @@
       </div>
     </div>
   </div>
+  
+  
   
   
   
