--- a/index.html
+++ b/index.html
@@ -692,41 +692,82 @@
     </div>
   </div>
 
-  <!-- Signup Modal -->
-  <div id="signupModal" class="modal-overlay hidden" onclick="closeModal('signupModal',event)">
+ <!-- Signup Modal -->
+<div id="signupModal" class="modal-overlay hidden" onclick="closeModal('signupModal',event)">
     <div class="modal-content" onclick="event.stopPropagation()">
-      <button class="close-btn" onclick="closeModal('signupModal',event)"><i class="fas fa-times"></i></button>
+      <button class="close-btn" onclick="closeModal('signupModal',event)">
+        <i class="fas fa-times"></i>
+      </button>
+  
       <div class="modal-header">
-        <div class="w-16 h-16 bg-gradient-to-br from-secondary to-secondary-light rounded-full flex items-center justify-center mx-auto mb-4 animate-bounce-gentle"><i class="fas fa-user-plus text-white text-2xl"></i></div>
+        <div class="w-16 h-16 bg-gradient-to-br from-secondary to-secondary-light rounded-full flex items-center justify-center mx-auto mb-4 animate-bounce-gentle">
+          <i class="fas fa-user-plus text-white text-2xl"></i>
+        </div>
         <h2 class="text-2xl md:text-3xl font-bold text-text-primary">Join QuickFix Pro</h2>
         <p class="text-gray-600 mt-2">Create your account</p>
       </div>
+  
       <div class="modal-body">
         <form class="space-y-6" onsubmit="signupUser(event)">
           <div class="form-group">
             <label class="form-label" for="fullName">Full Name</label>
-            <input id="fullName" type="text" class="form-input" placeholder="Enter your full name" required/>
+            <input id="fullName" type="text" class="form-input" placeholder="Enter your full name" required />
           </div>
+  
           <div class="form-group">
             <label class="form-label" for="emailAddress">Email Address</label>
-            <input id="emailAddress" type="email" class="form-input" placeholder="Enter your email" required/>
+            <input id="emailAddress" type="email" class="form-input" placeholder="Enter your email" required />
           </div>
+  
           <div class="form-group">
             <label class="form-label" for="password">Password</label>
-            <input id="password" type="password" class="form-input" placeholder="Create a secure password" required/>
+            <input id="password" type="password" class="form-input" placeholder="Create a secure password" required />
           </div>
+  
+          <!-- Account Type (NEW) -->
+          <div class="form-group">
+            <label class="form-label">Account Type</label>
+  
+            <div class="grid grid-cols-2 gap-3">
+              <!-- USER card -->
+              <label class="user-type-card border-2 border-gray-200 rounded-lg p-3 flex items-center justify-center cursor-pointer">
+                <input type="radio" name="accountRole" id="roleUser" value="user" class="hidden" checked>
+                <span class="font-semibold">
+                  <i class="fas fa-user mr-2"></i>User
+                </span>
+              </label>
+  
+              <!-- PROFESSIONAL card -->
+              <label class="user-type-card border-2 border-gray-200 rounded-lg p-3 flex items-center justify-center cursor-pointer">
+                <input type="radio" name="accountRole" id="roleProfessional" value="professional" class="hidden">
+                <span class="font-semibold">
+                  <i class="fas fa-briefcase mr-2"></i>Professional
+                </span>
+              </label>
+            </div>
+  
+            <p class="text-xs text-gray-500 mt-2">
+              Users can browse and book pros. Professionals can list services and access the Pro dashboard.
+            </p>
+          </div>
+          <!-- /Account Type -->
+  
           <button type="submit" class="btn-base btn-secondary w-full">Create Account</button>
         </form>
-
+  
+        <!-- Google Sign-In Button Container -->
         <div id="googleSignInBtnSignup" class="text-center mt-6"></div>
+  
         <div class="text-center mt-6">
-          <p class="text-gray-600">Already have an account?
+          <p class="text-gray-600">
+            Already have an account?
             <button onclick="closeModal('signupModal',event); openModal('loginModal',event);" class="text-primary font-bold hover:text-primary-dark transition-colors">Sign in</button>
           </p>
         </div>
       </div>
     </div>
   </div>
+  
 
   <!-- Work Upload Modal -->
   <div id="workUploadModal" class="modal-overlay hidden" onclick="closeModal('workUploadModal',event)">
